# plskit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  testpypi.yml
examples/: fit_and_ci.py  omnibus_and_ci.py
plskit-jl/: Project.toml  README.md
plskit-jl/src/: plskit.jl
plskit-jl/test/: runtests.jl
plskit-py/: Cargo.toml  README.md
plskit-py/python/plskit/: __init__.py  _api.py  _errors.py  _results.py
plskit-py/src/: lib.rs
plskit-py/tests/: test_confirmatory_test.py  test_corpus.py  test_corpus_hash.py  test_errors.py  test_find_k_optimal.py  test_find_k_sequence.py  test_pls1_confirmatory_ci.py  test_pls1_fit.py  test_pls1_perm_null.py  test_pls1_rotation_stability.py  test_predict.py  test_preprocess.py  test_rotate.py  test_weights_confirmatory.py  test_weights_find_k.py  test_weights_resampling_degenerate.py  test_weights_rotation_stability.py  test_weights_validation.py  test_weights_wls_reference.py
plskit-r/: DESCRIPTION  NAMESPACE  README.md
plskit-r/R/: version.R
plskit-r/src/: Makevars
plskit-r/src/rust/: Cargo.toml
plskit-r/src/rust/src/: lib.rs
plskit-rs/: Cargo.toml  README.md
plskit-rs/src/: error.rs  find_k.rs  fit.rs  lib.rs  linalg.rs  perm_null.rs  predict.rs  preprocess.rs  resample.rs  rng.rs  rotate.rs  rotation_stability.rs  sequential.rs  signal_test.rs  subsample.rs
plskit-rs/tests/: byte_parity.rs  corpus.rs  coverage_mc.rs  preprocess_basic.rs  rotate_ssd_parity.rs  ssd_reference_seed42.json  weights_fit_basic.rs  weights_integer_replication_parity.rs  weights_n_eff_kish.rs  weights_row_scaling_identity.rs  weights_uniform_invariance.rs
plskit-testdata-gen/: Cargo.toml
plskit-testdata-gen/src/: lib.rs  main.rs  manifest.rs  npz.rs
plskit-testdata-gen/src/cases/: mod.rs  pls1_confirmatory_test.rs  pls1_find_k_optimal.rs  pls1_find_k_sequence.rs  pls1_fit.rs  pls1_perm_null.rs  pls1_predict.rs  pls1_rotation_stability.rs  preprocess.rs  rotate.rs
plskit-testdata-gen/tests/: all_cases_smoke.rs  manifest_schema.rs  npz_write_and_hash.rs  pls1_confirmatory_smoke.rs  pls1_find_k_optimal_smoke.rs  pls1_find_k_sequence_smoke.rs  pls1_fit_family_smoke.rs  pls1_fit_smoke.rs  pls1_perm_null_smoke.rs  pls1_predict_smoke.rs  pls1_rotation_stability_smoke.rs  preprocess_smoke.rs  rotate_smoke.rs
scripts/: check_corpus_hash.py
testdata/: README.md  manifest.json  schema.json
testdata/inputs/: pls1_find_k_sequence_inputs.npz  pls1_fit_skinny_n200_d5_k1.npz  pls1_fit_small_n50_d10_sequence.npz  pls1_fit_wide_n30_d100_k1.npz  pls1_predict_basic_n80_d6_k2.npz  preprocess_n50_d10_with_weights.npz  rotate_varimax_d6_k2.npz
testdata/outputs/pls1_confirmatory_test/: pls1_confirmatory_e.npz  pls1_confirmatory_raw_perm.npz  pls1_confirmatory_score.npz  pls1_confirmatory_split_nb.npz  pls1_confirmatory_split_nb_ci.npz  pls1_confirmatory_split_perm.npz
testdata/outputs/pls1_find_k_optimal/: pls1_find_k_optimal_bic.npz  pls1_find_k_optimal_r2_max.npz  pls1_find_k_optimal_r2_se.npz  pls1_find_k_optimal_r2_se_diagnostic.npz
testdata/outputs/pls1_find_k_sequence/: pls1_find_k_sequence_e.npz  pls1_find_k_sequence_raw_perm.npz  pls1_find_k_sequence_split_nb.npz  pls1_find_k_sequence_split_perm.npz
testdata/outputs/pls1_fit/: pls1_fit_skinny_n200_d5_k1.npz  pls1_fit_small_n50_d10_k1.npz  pls1_fit_small_n50_d10_k3.npz  pls1_fit_small_n50_d10_sequence.npz  pls1_fit_wide_n30_d100_k1.npz  pls1_fit_wide_n30_d100_k3.npz
testdata/outputs/pls1_perm_null/: pls1_perm_null_basic_n80_d6_k2.npz
testdata/outputs/pls1_predict/: pls1_predict_basic_n80_d6_k2.npz
testdata/outputs/pls1_rotation_stability/: pls1_rotation_stability_n80_d6_k2.npz
testdata/outputs/preprocess/: preprocess_n50_d10_with_weights.npz
testdata/outputs/rotate/: rotate_varimax_d6_k2.npz
