[package]
name = "plskit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PLS regression with modern inference. Rust implementation; the same engine drives the Python, R, and Julia wrappers."
readme = "README.md"

[dependencies]
faer = { workspace = true }
procrustes = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
getrandom = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
proptest = "1"                  # property tests; first one lands in B3
serde_json = "1"                # corpus test reader (T14)
ndarray = "0.17"                # test-only: corpus reader feeds ndarray-npy
ndarray-npy = "0.10"            # test-only: load .npz fixtures (T14)

[lints]
workspace = true
